# rsync-torrents

./: .gitignore  .pre-commit-config.yaml  README.md  config.example  config.example.toml  pyproject.toml  sync-torrent.sh  transmission-idle-shutdown.service  transmission-idle-shutdown.timer  transmission-proxy.service  transmission-proxy.socket  transmission-settings.json  transmission-watch.sh
.github/workflows/: ci.yml
rsync_torrents/: cli.py  config.py  hashes.py  labels.py  log_setup.py  rsync_util.py  watch.py
tests/: conftest.py  test_cli.py  test_config.py  test_hashes.py  test_labels.py  test_log_setup.py  test_rsync_util.py  test_watch.py
