[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rsync-torrents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "transmission-rpc>=7.0",
    "filelock>=3.0",
]

[project.scripts]
rsync-torrents = "rsync_torrents.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-mock>=3.0", "pre-commit>=3.0"]

[tool.ruff]
line-length = 98
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
